tests/auto/quick/qquicktextedit/data/textEdit.qml
@@ -1,0 +1,6 @@
+import QtQuick
+
+TextEdit {
+    width: 400
+    height: 540
+}
